--- a/其他/设计模式.md
+++ b/其他/设计模式.md
@@ -3255,19 +3255,276 @@ humidity =====> 30.0
 
 
 
+## 十九、中介者模式
+
+### 零、介绍
+
+设计模式中的中介者模式（Mediator Pattern）是一种行为型设计模式，其主要目的是简化多个对象或类之间的复杂交互关系，通过引入一个专门的中介对象来协调这些对象间的通信。中介者模式的核心思想是“封装交互”，即将原来直接在多个对象间进行的多重关联和依赖关系，转移到一个统一的中介者对象中进行管理，从而降低系统的耦合度，提高模块的可复用性和可扩展性。
+
+以下是中介者模式的详细说明：
+
+**模式定义**
+
+中介者模式定义了一个中介对象（Mediator），它封装了对象间的交互逻辑，使得各个参与交互的个体对象（Colleague）无需显式地相互引用，而是通过与中介者进行交互来间接地与其它对象通信。中介者负责控制和协调各同事对象之间的交互流程，为它们提供一个集中的交互点。
+
+**角色组成**
+
+**1. Mediator（中介者）**
+   - 定义一个接口，用于与各同事对象交互，定义了同事对象之间进行通信的公共方法。
+   - 实现类封装了同事对象间的复杂交互逻辑，处理来自同事对象的消息，并决定如何转发消息或者执行相应的操作。
+
+**2. Colleague（同事类）**
+   - 各个参与交互的对象，它们只知道与中介者打交道，不知道其他同事的存在。
+   - 每个同事类都持有中介者的引用，通过调用中介者的方法来发送请求或接收响应，而不是直接与其他同事通信。
+
+**工作原理**
+
+1. **交互封装**：当同事对象需要与其他同事对象交互时，不直接互相调用方法，而是通过调用中介者的相应方法来实现。这样，同事对象之间的交互细节被中介者隐藏起来，降低了它们之间的耦合度。
+
+2. **消息传递**：中介者接收到同事对象的请求后，根据请求的性质和系统状态，决定如何转发消息或执行何种操作。它可以同步或异步地通知一个或多个同事对象，也可以根据业务规则进行更复杂的逻辑处理。
+
+3. **解耦与复用**：由于同事对象仅依赖中介者接口，不直接依赖其他同事，因此修改一个同事对象的行为或添加新的同事对象不会影响到其他对象，增强了系统的灵活性和可扩展性。同时，中介者的逻辑可以被多个同事对象共享，提高了代码的复用性。
+
+4. **变更集中化**：当系统交互逻辑发生变化时，只需要修改中介者类的实现，而无需改动各个同事类，使得系统行为的变更集中在一个地方，便于管理和维护。
+
+**应用场景**
+
+中介者模式适用于以下场景：
+
+- **对象间的交互复杂且频繁**：当系统中对象间的交互关系呈现出网状结构，有大量多对多的依赖时，中介者模式可以有效地梳理这些关系，将复杂的交互逻辑集中管理。
+
+- **需要降低对象间的耦合度**：如果直接的相互引用导致了高耦合度，影响了代码的可读性、可维护性和可扩展性，中介者可以作为通信中枢，解除对象间的直接依赖。
+
+- **希望独立地改变对象间的交互方式**：当需要独立地调整或扩展某些对象间的交互行为时，中介者作为一个单独的组件，可以灵活地修改而不影响其他对象。
+
+- **常见示例**：
+   - 用户界面框架（如MVC、MVP、MVVM）中的控制器（Controller）或 presenter，作为视图（View）和模型（Model）之间的中介。
+   - 多线程编程中的线程池管理器，协调各个线程的任务分配与同步。
+   - 网络聊天室系统中的聊天服务器，负责转发用户消息。
+   - 事件驱动系统中的事件总线或调度中心，处理事件的发布与订阅。
+
+**优点：**
+
+- **减少类间耦合**：通过中介者避免了同事类之间的直接依赖，使得对象之间的关系更加清晰。
+- **简化系统结构**：将原本复杂的网状交互转化为星形结构，简化了系统设计。
+- **易于变更与扩展**：新增、修改或删除交互行为只需在中介者中进行，不影响同事类。
+- **支持复用**：中介者的交互逻辑可以被多个同事类共享。
+
+**缺点：**
+
+- **中介者可能变得庞大而复杂**：随着系统规模增大，中介者承担的职责增多，可能导致中介者类过于复杂，成为系统的瓶颈或单点故障。
+- **增加系统的抽象层次**：引入中介者增加了系统的抽象层次，对于简单系统可能显得过度设计。
+
+总的来说，中介者模式通过引入中介对象来封装和协调对象间的交互，实现了对象间的解耦合，提升了系统的可维护性和可扩展性，尤其适用于处理复杂对象交互的场景。在实际应用中，应根据系统的具体需求权衡是否采用中介者模式以及如何设计中介者以保持其简洁高效。
 
 
 
+### 一、代码
+
+以下是一个基于Java实现的中介者模式示例代码，以一个简单的办公室电器控制系统的场景为例，展示了如何使用中介者来协调电灯、空调和电脑等电器设备的开关操作：
+
+```java
+// 抽象中介者接口
+interface OfficeElectronicsMediator {
+    void sendMessage(String message, ElectronicDevice sender);
+}
+
+// 具体中介者：办公室电器控制系统
+class OfficeControlSystem implements OfficeElectronicsMediator {
+    private Light light;
+    private AirConditioner airConditioner;
+    private Computer computer;
+
+    public void setLight(Light light) {
+        this.light = light;
+    }
+
+    public void setAirConditioner(AirConditioner airConditioner) {
+        this.airConditioner = airConditioner;
+    }
+
+    public void setComputer(Computer computer) {
+        this.computer = computer;
+    }
+
+    @Override
+    public void sendMessage(String message, ElectronicDevice sender) {
+        if (message.equals("turnOn")) {
+            if (sender == light) {
+                System.out.println("Light turned on.");
+                airConditioner.turnOn();
+            } else if (sender == airConditioner) {
+                System.out.println("Air conditioner turned on.");
+                light.turnOn();
+            } else if (sender == computer) {
+                System.out.println("Computer turned on.");
+                light.turnOn();
+                airConditioner.turnOn();
+            }
+        } else if (message.equals("turnOff")) {
+            if (sender == light) {
+                System.out.println("Light turned off.");
+                airConditioner.turnOff();
+            } else if (sender == airConditioner) {
+                System.out.println("Air conditioner turned off.");
+                light.turnOff();
+            } else if (sender == computer) {
+                System.out.println("Computer turned off.");
+                light.turnOff();
+                airConditioner.turnOff();
+            }
+        }
+    }
+}
+
+// 抽象同事类：电器设备
+abstract class ElectronicDevice {
+    protected OfficeElectronicsMediator mediator;
+
+    public ElectronicDevice(OfficeElectronicsMediator mediator) {
+        this.mediator = mediator;
+    }
+
+    public abstract void turnOn();
+    public abstract void turnOff();
+}
+
+// 具体同事类：电灯
+class Light extends ElectronicDevice {
+    public Light(OfficeElectronicsMediator mediator) {
+        super(mediator);
+    }
+
+    @Override
+    public void turnOn() {
+        mediator.sendMessage("turnOn", this);
+    }
+
+    @Override
+    public void turnOff() {
+        mediator.sendMessage("turnOff", this);
+    }
+}
+
+// 具体同事类：空调
+class AirConditioner extends ElectronicDevice {
+    public AirConditioner(OfficeElectronicsMediator mediator) {
+        super(mediator);
+    }
+
+    @Override
+    public void turnOn() {
+        mediator.sendMessage("turnOn", this);
+    }
+
+    @Override
+    public void turnOff() {
+        mediator.sendMessage("turnOff", this);
+    }
+}
+
+// 具体同事类：电脑
+class Computer extends ElectronicDevice {
+    public Computer(OfficeElectronicsMediator mediator) {
+        super(mediator);
+    }
+
+    @Override
+    public void turnOn() {
+        mediator.sendMessage("turnOn", this);
+    }
+
+    @Override
+    public void turnOff() {
+        mediator.sendMessage("turnOff", this);
+    }
+}
+
+// 客户端代码
+public class Main {
+    public static void main(String[] args) {
+        OfficeControlSystem officeControlSystem = new OfficeControlSystem();
+
+        Light light = new Light(officeControlSystem);
+        AirConditioner airConditioner = new AirConditioner(officeControlSystem);
+        Computer computer = new Computer(officeControlSystem);
+
+        officeControlSystem.setLight(light);
+        officeControlSystem.setAirConditioner(airConditioner);
+        officeControlSystem.setComputer(computer);
+
+        // 开启电脑，会联动开启电灯和空调
+        computer.turnOn();
+
+        // 关闭电灯，会联动关闭空调
+        light.turnOff();
+    }
+}
+```
+
+在这个示例中：
+
+- `OfficeElectronicsMediator` 是抽象中介者接口，定义了发送消息的方法。
+- `OfficeControlSystem` 是具体中介者类，实现了中介者接口，负责协调电灯、空调和电脑之间的交互。
+- `ElectronicDevice` 是抽象同事类，定义了电器设备的通用行为（如开关）和持有中介者引用。
+- `Light`, `AirConditioner`, `Computer` 是具体同事类，代表不同的电器设备，它们通过调用中介者的方法来触发系统内的交互行为。
+
+客户端代码创建了具体的电器设备对象，并通过中介者对象来协调它们的开关操作。当一个设备被开启或关闭时，中介者会根据预设的逻辑决定是否联动开启或关闭其他设备，从而实现了电器设备间的解耦合交互。
 
 
 
+## 二十、备忘录模式
 
+### 零、介绍
 
+备忘录模式（Memento Pattern）是一种行为型设计模式，旨在提供一种机制来捕获并保存对象的当前状态，以便在未来某个时刻能够恢复到该状态。这种模式允许在不违反封装原则的前提下，安全地备份和恢复对象的内部状态，常用于实现撤销/重做操作、游戏存档、事务回滚等功能。
 
+**模式定义**
 
+备忘录模式定义了以下角色：
 
+1. **Originator（发起人）**：
+   - 负责创建备忘录对象（Memento），存储自己的内部状态。
+   - 提供方法用于获取当前状态的备忘录，以及使用备忘录恢复内部状态。
 
+2. **Memento（备忘录）**：
+   - 存储发起人对象的内部状态。
+   - 通常只提供一个接口供发起人访问其内部状态，对外部其他对象（尤其是客户端）隐藏其具体实现和内部数据。
 
+3. **Caretaker（管理者）**：
+   - 负责保存和管理备忘录对象，但不能对备忘录的内容进行任何操作或访问其内部状态。
+   - 在需要时选择合适的备忘录返回给发起人，由发起人负责恢复状态。
+
+**工作原理**
+
+1. **状态捕获**：发起人对象在需要保存状态时，创建一个备忘录对象，将自身的当前状态（通常是关键属性或数据）复制到备忘录中。
+
+2. **状态存储**：管理者对象（如一个栈或队列）接收发起人创建的备忘录，将其保存起来。可以保存多个备忘录以支持多次撤销/重做操作。
+
+3. **状态恢复**：当需要恢复到先前状态时，发起人从管理者那里获取对应的备忘录对象，通过备忘录提供的接口读取并恢复其内部状态。这个过程不需要直接访问备忘录的内部细节，保证了发起人的封装性。
+
+**应用场景**
+
+备忘录模式适用于以下场景：
+
+- **撤销/重做功能**：如文本编辑器、图形编辑器、数据库事务等，用户可以撤销最近的操作并重新执行。
+- **游戏存档**：玩家可以保存游戏进度并在之后恢复，无需了解游戏内部复杂的状态信息。
+- **事务管理**：在分布式事务或数据库事务中，回滚到一个已知的稳定状态。
+- **配置历史**：系统允许用户查看和恢复到之前的配置版本。
+
+### ****
+
+**优点：**
+
+- **封装性**：备忘录模式保护了发起人的内部状态，使其免受外部直接访问，维护了对象的封装边界。
+- **状态恢复**：提供了简单且安全的方式恢复对象到过去的状态，支持非线性操作历史。
+- **事务一致性**：在需要确保事务原子性和回滚能力的场景中，备忘录模式有助于实现这一目标。
+
+**缺点：**
+
+- **资源消耗**：保存大量备忘录可能会占用较多内存或其他存储资源，特别是在状态数据量大或状态变化频繁的情况下。
+- **设计复杂度**：如果对象状态复杂，备忘录类的设计和实现可能会较为复杂，需要正确识别和捕获关键状态。
+- **过多的备忘录管理**：如果撤销/重做层级过深，或者存在大量可撤销操作，对备忘录的管理（如存储、查找、清理等）可能会变得复杂。
 
 
 
