--- a/数据结构题目/贪心算法.md
+++ b/数据结构题目/贪心算法.md
@@ -384,6 +384,28 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int maxProfit(int[] prices) {
+        int res = 0;
+
+        for(int i = 1; i < prices.length; i++){
+            if(prices[i] - prices[i-1] > 0){
+                res += prices[i] - prices[i - 1];
+            }
+        }
+
+        return res;
+    }
+}
+```
+
+
+
+
+
 ### 答案做法
 
 **收集正利润的区间，就是股票买卖的区间，而我们只需要关注最终利润，不需要记录区间**。
@@ -439,6 +461,34 @@ class Solution {
             }
             //如果已经可以到达终点，直接返回true
             if(canGet >= nums.length - 1){
+                return true;
+            }
+        }
+
+        return false;
+    }
+}
+```
+
+
+
+### 二刷
+
+使用递归，超时了
+
+```java
+class Solution {
+    public boolean canJump(int[] nums) {
+        return traversal(0, nums);
+    }
+
+    public boolean traversal(int index, int[] nums){
+        if(index + nums[index] >= nums.length - 1){
+            return true;
+        }
+
+        for(int i = index + 1; (i <= index + nums[index]) && (i < nums.length); i++){
+            if(traversal(i,nums)){
                 return true;
             }
         }
