--- a/数据结构题目/贪心算法.md
+++ b/数据结构题目/贪心算法.md
@@ -619,6 +619,47 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int jump(int[] nums) {
+        if(nums.length == 1){
+            return 0;
+        }
+        //能走的最远距离
+        int most = nums[0];
+        //想走到最远距离所需的步数
+        int step = 1;
+
+        for(int i = 0; i < nums.length;){
+            //满足条件
+            if(most >= nums.length - 1){
+                return step;
+            }
+            //当前窗口能走的最远距离
+            int most2 = most;
+            //更新当前窗口能走的距离
+            //j是走的步数
+            for(int j = 1; j <= most - i && (i+j) < nums.length; j++){
+                most2 = Math.max(nums[i+j] + i + j, most2);
+                if(most2 >= nums.length - 1){
+                    return step+1;
+                }
+            }
+            
+            i = most;
+            most = most2;
+            step++;
+        }
+
+        return step;
+    }
+}
+```
+
+
+
 
 
 ### 答案代码
