--- a/数据结构题目/贪心算法.md
+++ b/数据结构题目/贪心算法.md
@@ -795,6 +795,42 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int largestSumAfterKNegations(int[] nums, int k) {
+        int res = 0;
+        //先排序
+        Arrays.sort(nums);
+
+        for(int i = 0; k > 0; i++){
+            if(i >= nums.length || nums[i] >= 0){
+                //如果已经全都是正数，剩下的k让最小的正数一直取反
+                Arrays.sort(nums);
+                while(k > 0){
+                    nums[0] =  0 - nums[0];
+                    k--;
+                }
+            }else{
+                nums[i] = 0 - nums[i];
+                k--;
+            }
+        }
+        //求和
+        for(int i = 0; i < nums.length; i++){
+            res += nums[i];
+        }
+
+        return res;
+    }
+}
+```
+
+
+
+
+
 ### 答案代码
 
 先按绝对值大小排序，把负数都变为整数，如果最后k的值为奇数，那么就让最小的值取反一次即可；
