--- a/数据结构题目/贪心算法.md
+++ b/数据结构题目/贪心算法.md
@@ -930,6 +930,8 @@ class Solution {
   * 如果油量出现负值，说明之前走过的路程都不能作为起点，要重新开始算（将当前油量赋值为0，**起点记录坐标index**改为下一个油站）。
   * 还需要计算一个**总剩余油量totalSum**，就是全程走完是否有油剩下，如果为负值，说明无论从哪个起点出发都不能走完。
 
+  ![](https://code-thinking-1253855093.file.myqcloud.com/pics/20230117165628.png)
+
   ```java
   class Solution {
       public int canCompleteCircuit(int[] gas, int[] cost) {
@@ -966,6 +968,84 @@ class Solution {
 ![](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/greedy/096.png)
 
 
+
+### 二刷
+
+过了，但很慢，看看答案做法
+
+```java
+class Solution {
+    public int candy(int[] ratings) {
+        int[] candyArr = new int[ratings.length];
+        candyArr[0] = 1;
+
+        for(int i = 1; i < ratings.length; i++){
+            if(ratings[i] < ratings[i-1]){
+                int index = i;
+                candyArr[i] = 1;
+              //向前做一次检查
+                while(index > 0 && ratings[index] < ratings[index-1]){
+                    candyArr[index - 1] = Math.max(candyArr[index] + 1, candyArr[index - 1]);
+                    index--;
+                }
+            }
+
+            if(ratings[i] == ratings[i-1]){
+                candyArr[i] = 1;
+            }
+
+            if(ratings[i] > ratings[i-1]){
+                candyArr[i] = candyArr[i-1] + 1;
+            }
+        }
+
+        int res = 0;
+        for(int i = 0; i < candyArr.length; i++){
+            res += candyArr[i];
+        }
+
+        return res;
+    }
+}
+```
+
+```java
+//答案做法
+class Solution {
+    public int candy(int[] ratings) {
+        
+        int[] candyArr = new int[ratings.length];
+        candyArr[0] = 1;
+
+        //从左到右
+        for(int i = 1; i < ratings.length; i++){
+            if(ratings[i] > ratings[i-1]){
+                candyArr[i] = candyArr[i-1] + 1;
+            }else{
+                candyArr[i] = 1;
+            }
+        }
+
+        //从右到左
+        for(int i = ratings.length - 2; i >= 0; i--){
+            if(ratings[i] > ratings[i+1]){
+                candyArr[i] = Math.max(candyArr[i+1] + 1, candyArr[i]);
+            }
+        }
+
+        int res = 0;
+        for(int i = 0; i < candyArr.length; i++){
+            res += candyArr[i];
+        }
+
+        return res;
+    }
+}
+```
+
+
+
+![](https://code-thinking-1253855093.file.myqcloud.com/pics/20230202102044.png)
 
 ### 思路
 
