--- a/数据结构题目/贪心算法.md
+++ b/数据结构题目/贪心算法.md
@@ -1101,6 +1101,44 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public boolean lemonadeChange(int[] bills) {
+        int five = 0;
+        int ten = 0;
+
+        for(int i = 0; i < bills.length; i++){
+            if(bills[i] == 10){ //收到10元
+                if(five <= 0){
+                    return false;
+                }
+                five--;
+                ten++;
+            }else if (bills[i] == 20){ //收到20元
+                if(ten > 0 && five > 0){
+                    ten--;
+                    five--;
+                }else if(ten == 0 && five >= 3){
+                    five -= 3;
+                }else{
+                    return false;
+                }
+            }else{  //收到5元
+                five++;
+            }
+        }
+
+        return true;
+    }
+}
+```
+
+
+
+
+
 ### 思路
 
 找零只需要且只能用5美元和10美元，所以只需要记录5和10的张数就可以了。
