--- a/数据结构题目/贪心算法.md
+++ b/数据结构题目/贪心算法.md
@@ -1207,6 +1207,12 @@ class Solution {
 
 
 
+①根据身高从大到小排序，身高一样的 k 小的在前面。
+
+②按照第一步的顺序，根据 k 插入一个队列，k 是多少就插入第几个。
+
+
+
 
 ### 代码
 
@@ -1293,6 +1299,42 @@ class Solution {
     }
 }
 ```
+
+
+
+### 二刷
+
+```java
+class Solution {
+    public int findMinArrowShots(int[][] points) {
+        //根据第一个数排序
+        Arrays.sort(points, (a, b) -> {
+            return a[0] - b[0];
+        });
+
+        int left = points[0][0];
+        int right = points[0][1];
+        int res = 1;
+
+        for(int i = 1; i < points.length; i++){
+            if(points[i][0] >= left && points[i][0] <= right){
+                //可以被同一只箭射穿，修改射箭范围
+                left = Math.max(left, points[i][0]);
+                right = Math.min(right, points[i][1]);
+            }else{
+                //换一只箭
+                res++;
+                left = points[i][0];
+                right = points[i][1];
+            }
+        }
+
+        return res;
+    }
+}
+```
+
+
 
 
 
