--- a/数据结构题目/贪心算法.md
+++ b/数据结构题目/贪心算法.md
@@ -1395,6 +1395,39 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int eraseOverlapIntervals(int[][] intervals) {
+        Arrays.sort(intervals, (a, b)->{
+            //根据第一个数排序
+            return a[0] - b[0];
+        });
+
+        int right = intervals[0][1];
+        int res = 0;
+
+        for(int i = 1; i < intervals.length; i++){
+            if(intervals[i][0] < right){
+                //如果在边界内，那么就去除边界较大的一个
+                res++;
+                right = Math.min(right, intervals[i][1]);
+            }else{
+                //如果不在边界内，就更新边界
+                right = intervals[i][1];
+            }
+        }
+
+        return res;
+    }
+}
+```
+
+
+
+
+
 
 ### 代码
 
