--- a/数据结构题目/贪心算法.md
+++ b/数据结构题目/贪心算法.md
@@ -1582,6 +1582,44 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int[][] merge(int[][] intervals) {
+        Arrays.sort(intervals, (a,b) -> {return a[0] - b[0];});
+
+        List<int[]> res = new ArrayList<>();
+
+        int first = intervals[0][0];
+        int last = intervals[0][1];
+
+        for(int i = 1; i < intervals.length; i++){
+            if(intervals[i][0] <= last){
+                //可以合并
+                last = Math.max(last, intervals[i][1]);
+            }else{
+                //无法合并，把上一个结果加入到结果集，更新当前边界
+                int[] arr = {first, last};
+                res.add(arr);
+                
+                first = intervals[i][0];
+                last = intervals[i][1];
+            }
+        }
+
+        int[] arr = {first, last};
+        res.add(arr);
+
+        return res.toArray(new int[0][0]);
+    }
+}
+```
+
+
+
+
+
 ###思路
 
 * 排序，按第一个元素的升序排序，如果相等，就按第二个元素的降序排
