--- a/数据结构题目/贪心算法.md
+++ b/数据结构题目/贪心算法.md
@@ -1733,6 +1733,8 @@ class Solution {
 
 ### 答案
 
+一旦出现strNum[i - 1] > strNum[i]的情况（非单调递增），首先想让strNum[i - 1]减一，strNum[i]赋值9
+
 答案是从后向前遍历。不过差不多
 
 ```java
@@ -1865,7 +1867,9 @@ class Solution {
 
 
 
+## 总结
 
+![](https://code-thinking-1253855093.file.myqcloud.com/pics/%E8%B4%AA%E5%BF%83%E6%80%BB%E7%BB%93water.png)
 
 
 
