--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -160,6 +160,32 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int climbStairs(int n) {
+        //根据前两节阶梯推出当前。
+        int[] dp = new int[2];
+        dp[0] = 1;
+        dp[1] = 1;
+
+        for(int i = 2; i <= n; i++){
+            int method = dp[0] + dp[1];
+
+            dp[0] = dp[1];
+            dp[1] = method;
+        }
+
+        return dp[1];
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
