--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -232,6 +232,8 @@ class Solution {
 
 ![](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/135.png)
 
+
+
 ### 思路
 
 ①dp[i]数组含义：爬到第i层需要花费的最小费用
@@ -253,6 +255,32 @@ dp[i - 2] 跳到 dp[i] 需要花费 dp[i - 2] + cost[i - 2]。
 ④确定遍历顺序：从前往后
 
 ⑤打印dp数组：![](https://code-thinking-1253855093.file.myqcloud.com/pics/20221026175104.png)
+
+
+
+### 二刷
+
+```java
+class Solution {
+    public int minCostClimbingStairs(int[] cost) {
+        int index = 0;
+        int[] dp = new int[2];
+        dp[0] = cost[0];
+        dp[1] = cost[1];
+
+        for(int i = 2; i < cost.length; i++){
+            //这里计算从前面两个台阶中选择一个便宜的爬到当前台阶。
+            int cur = Math.min(dp[0], dp[1]) + cost[i];
+            dp[0] = dp[1];
+            dp[1] = cur;
+        }
+
+        return Math.min(dp[0], dp[1]);
+    }
+}
+```
+
+
 
 
 
