--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -336,6 +336,39 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int uniquePaths(int m, int n) {
+        int[][] arr = new int[m][n];
+
+        //第一行都设为1
+        for(int i = 0; i < n; i++){
+            arr[0][i] = 1; 
+        }
+
+        //第一列都设为1
+        for(int i = 0; i < m; i++){
+            arr[i][0] = 1;
+        }
+
+        //抵达当前格子的方式为：上面的 + 左边的
+        for(int i = 1; i < m; i++){
+            for(int j = 1; j < n; j++){
+                arr[i][j] = arr[i-1][j] + arr[i][j-1];
+            }
+        }
+
+        return arr[m-1][n-1];
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
