--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -421,6 +421,56 @@ lass Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int uniquePathsWithObstacles(int[][] obstacleGrid) {
+        if(obstacleGrid[0][0] == 1){
+            return 0;
+        }
+
+        int m = obstacleGrid.length;
+        int n = obstacleGrid[0].length;
+
+        int[][] arr = new int[m][n];
+
+        //初始化第一列
+        for(int i = 0; i < m; i++){
+            if(obstacleGrid[i][0] == 1){
+                //注意这里不能是continue，因为前面被堵了，后面的都去不了
+                break;
+            }
+            arr[i][0] = 1;
+        }
+
+        //初始化第一行
+        for(int i = 0; i < n; i++){
+            if(obstacleGrid[0][i] == 1){
+                break;
+            }
+            arr[0][i] = 1;
+        }
+
+        for(int i = 1; i < m; i++){
+            for(int j = 1; j < n; j++){
+                if(obstacleGrid[i][j] == 1){
+                    continue;
+                }
+
+                arr[i][j] = arr[i-1][j] + arr[i][j-1];
+            }
+        }
+
+        return arr[m-1][n-1];
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
