--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -566,6 +566,43 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int integerBreak(int n) {
+        int[] dp = new int[n+1];
+
+        dp[0] = 1;
+        dp[1] = 1;
+
+        for(int i = 2; i <= n; i++){
+            int max = 0;
+
+            for(int j = 1; j <= (i/2); j++){
+                //继续拆
+                max = Math.max(max, dp[j] * dp[i-j]);
+                //不继续拆
+                max = Math.max(max, j * (i-j));
+            }
+            
+            if(i != n){
+                //如果不是n，其实可以不拆
+                dp[i] = Math.max(max, i);
+            }else{
+                return max;
+            }
+        }
+
+        return dp[n];
+    }
+}
+```
+
+
+
+
+
 ### 解法一：动态规划
 
 ![](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/140.png)
