--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -679,6 +679,37 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int numTrees(int n) {
+        if(n <= 2){
+            return n;
+        }
+
+        int[] dp = new int[n+1];
+        //初始化dp数组
+        dp[0] = 1;
+        dp[1] = 1;
+        dp[2] = 2;
+
+        for(int i = 3; i <= n; i++){
+            for(int j = 0; j < i; j++){
+                //左边种类数 乘以 右边种类数
+                dp[i] += dp[j] * dp[i-j-1];
+            }
+        }
+
+        return dp[n];
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
