--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -939,6 +939,49 @@ for(int i = 0; i < weight.size(); i++) { // 遍历物品
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public boolean canPartition(int[] nums) {
+        int sum = 0;
+
+        for(int i = 0; i < nums.length; i++){
+            sum += nums[i];
+        }
+        //如果是奇数，返回false
+        if(sum % 2 == 1){
+            return false;
+        }
+
+        int target = sum / 2;
+
+        int[] arr = new int[target + 1];
+
+        //先遍历物品
+        for(int i = 0; i < nums.length; i++){
+            //再遍历背包
+            //一维数组要倒序，保证一个物品只放入一次
+            for(int j = arr.length-1; j >= 0; j--){
+                if(nums[i] <= j){
+                    arr[j] = Math.max(arr[j], arr[j-nums[i]] + nums[i]);
+                }
+                //剪枝
+                if(arr[target] == target){
+                    return true;
+                }
+            }
+        }
+
+        return arr[target] == target;
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
