--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -1044,6 +1044,43 @@ class Solution {
 
 相撞之后剩下的最小石头重量就是 (sum - dp[target]) - dp[target]
 
+
+
+### 二刷
+
+```java
+class Solution {
+    public int lastStoneWeightII(int[] stones) {
+        int sum = 0;
+
+        //背包容量
+        for(int i = 0; i < stones.length; i++){
+            sum += stones[i];
+        }
+
+        int target = sum / 2;
+        //使用动态规划，把石头尽量分成两半
+        int[] dp = new int[target+1];
+        //遍历物品
+        for(int i = 0; i < stones.length; i++){
+            //遍历背包
+            for(int j = target; j >= 0; j--){
+                if(j >= stones[i]){
+                    dp[j] = Math.max(dp[j], dp[j - stones[i]] + stones[i]);
+                }
+            }
+        }
+
+        return sum - dp[target] * 2;
+
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
