--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -1129,6 +1129,44 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int findTargetSumWays(int[] nums, int target) {
+        int sum = 0;
+        //假设全是取负号
+        for(int i = 0; i < nums.length; i++){
+            sum -= nums[i];
+        }
+
+        if(target < sum){
+            return 0;
+        }
+        if((target - sum) % 2 == 1){
+            return 0;
+        }
+        //现在问题变成了取多少个正号，达到目标数
+        //也就是变成了 背包问题
+        int res = (target - sum) / 2;
+        int[] dp = new int[res + 1];
+        dp[0] = 1;
+
+        for(int i = 0; i < nums.length; i++){
+            for(int j = res; j >= nums[i]; j--){
+                dp[j] += dp[j - nums[i]];
+            }
+        }
+        
+        return dp[res];
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
