--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -1365,6 +1365,35 @@ private static void testCompletePackAnotherWay(){
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int change(int amount, int[] coins) {
+        int[] dp = new int[amount+1];
+        dp[0] = 1;
+
+        /**
+        * 如果求组合数就是外层for循环遍历物品，内层for遍历背包。
+        * 如果求排列数就是外层for遍历背包，内层for循环遍历物品。 
+        */
+        //先遍历物品
+        for(int i = 0; i < coins.length; i++){
+            //再遍历背包
+            for(int j = coins[i]; j <= amount; j++){
+                dp[j] += dp[j - coins[i]];
+            }
+        }
+
+        return dp[amount];
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
