--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -1253,6 +1253,45 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int findMaxForm(String[] strs, int m, int n) {
+        //这次的背包是二维的
+        int[][] dp = new int[m+1][n+1];
+
+        //遍历物品
+        for(String str : strs){
+            int zeroNum = 0;
+            int oneNum = 0;
+            for(char c : str.toCharArray()){
+                if(c == '0'){
+                    zeroNum++;
+                }else{
+                    oneNum++;
+                }
+            }
+
+            for(int i = m; i >= 0; i--){
+                for(int j = n; j >= 0; j--){
+                    //遍历背包
+                    if(zeroNum <= i && oneNum <= j){
+                        dp[i][j] = Math.max(dp[i][j], dp[i-zeroNum][j-oneNum] + 1);
+                    }
+                }
+            }
+        }
+
+        return dp[m][n];
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
