--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -1492,6 +1492,31 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int combinationSum4(int[] nums, int target) {
+        int[] dp = new int[target+1];
+        dp[0] = 1;
+
+        //先遍历背包
+        for(int i = 0; i <= target; i++){
+            //再遍历物品
+            for(int j = 0; j < nums.length; j++){
+                if(i >= nums[j]){
+                    dp[i] += dp[i - nums[j]];
+                }
+            }
+        }
+
+        return dp[target];
+    }
+}
+```
+
+
+
 ###代码
 
 ```java
