--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -1660,6 +1660,35 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int coinChange(int[] coins, int amount) {
+        Arrays.sort(coins);
+        int[] dp = new int[amount + 1];
+
+        for(int i = 1; i < dp.length; i++){
+            dp[i] = Integer.MAX_VALUE;
+        }
+
+        for(int i = 1; i <= amount; i++){
+            for(int j = 0; j < coins.length; j++){
+                if(i >= coins[j] && dp[i - coins[j]] != Integer.MAX_VALUE ){
+                    dp[i] = Math.min(dp[i-coins[j]] + 1, dp[i]);
+                }
+            }
+        }
+
+        return (dp[amount] == Integer.MAX_VALUE) ? -1 : dp[amount];
+    }
+}
+```
+
+
+
+
+
 ### 思路
 
 动规五部曲：
