--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -1757,6 +1757,53 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int numSquares(int n) {
+        /**
+        * 思路：每个数都由两个数组成，完全平方数的组合数设为1，
+            比如 5 = 1 + 4， ==> 2
+                5 = 2 + 3 ，==> 5
+                然后取最小
+         */
+        int[] dp = new int[n+1];
+
+        dp[0] = 1;
+        dp[1] = 1;
+
+        int num = 1;
+        //把完全平方数都设置为1
+        while(num * num <= n){
+            dp[num * num] = 1;
+            num++;
+        }
+
+        for(int i = 2; i <= n; i++){
+            if(dp[i] != 0){
+                continue;
+            }
+            int min = Integer.MAX_VALUE;
+            for(int j = 1; j <= i / 2; j++){
+                min = Math.min(min, dp[j] + dp[i-j]);
+            }
+
+            dp[i] = min; 
+        }
+
+        return dp[n];
+    }
+}
+/**
+* 更好的做法是像答案一样，转换为完全背包问题，完全平方数是物品，n是背包容量。
+*/
+```
+
+
+
+
+
 ### 代码
 
 ```java
