--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -1880,6 +1880,33 @@ if(set.contains(s.substring(j,i)) && dp[j]){
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public boolean wordBreak(String s, List<String> wordDict) {
+        Set<String> wordSet = new HashSet<>(wordDict);
+        boolean[] dp = new boolean[s.length() + 1];
+        dp[0] = true;
+
+        //遍历背包
+        for(int i = 1; i <= s.length(); i++){
+            for(int j = 0; j < i && !dp[i] ; j++){
+                if(wordSet.contains(s.substring(j,i)) && dp[j]){
+                    dp[i] = true;
+                }
+            }
+        }
+
+        return dp[s.length()];
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
