--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -2065,6 +2065,39 @@ public void testMultiPack2(){
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int rob(int[] nums) {
+        int len = nums.length;
+        if(len == 0) return 0;
+        if(len == 1) return nums[0];
+
+        //记录当前数字倒数第二个以前的最大数字
+        //比如当前下标为5，记录的是下标为3即以前的最大数字
+        //因为不能取到前一个
+        int curMax = nums[0];
+        //创建dp数组，记录走到第n家时偷盗最大数值
+        int[] dp = new int[len];
+        dp[0] = nums[0];
+        dp[1] = nums[1];
+
+        for(int i = 2; i < len; i++){
+            dp[i] = curMax + nums[i];
+            //更新
+            curMax = Math.max(curMax, dp[i-1]);
+        }
+
+        return Math.max(dp[len-1],dp[len-2]);
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
