--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -2151,6 +2151,50 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int rob(int[] nums) {
+        int len = nums.length;
+        if(len == 1) return nums[0];
+        if(len == 2) return Math.max(nums[0], nums[1]);
+
+        //分两种情况：
+        //1、抢第一个，不能包含最后一个
+        int withoutFirst = robRange(nums, 0, len - 1);
+        //2、不抢第一个，包含最后一个
+        int withFirst = robRange(nums, 1, len);
+
+        return Math.max(withFirst, withoutFirst);
+    }
+
+    //不成环时
+    public int robRange(int[] nums, int start, int end) {
+        int len = end - start;
+        if(len == 0) return 0;
+        if(len == 1) return nums[0];
+
+        int curMax = nums[start];
+        int[] dp = new int[len];
+        dp[0] = nums[start];
+        dp[1] = nums[start + 1];
+
+        for(int i = start + 2; i < len; i++){
+            dp[i] = curMax + nums[i];
+            //更新
+            curMax = Math.max(curMax, dp[i-1]);
+        }
+
+        return Math.max(dp[len-1],dp[len-2]);
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
