--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -2253,6 +2253,42 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int rob(TreeNode root) {
+        //判断子节点偷和不偷
+        //左右中遍历顺序
+        int[] res = traversal(root);
+        return Math.max(res[0], res[1]);
+    }
+
+    public int[] traversal(TreeNode root){
+        int[] dp = new int[2];
+        if(root == null){
+            return dp;
+        }
+        //左
+        int[] left = traversal(root.left);
+        //右
+        int[] right = traversal(root.right);
+
+        //中
+        //不偷
+        dp[0] = Math.max(left[0], left[1]) + Math.max(right[0], right[1]);
+        //偷
+        dp[1] = root.val + left[0] + right[0];
+
+        return dp;
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
