--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -2359,6 +2359,33 @@ dp\[i][1] ：不持有彩票：dp\[i][1] = 0;
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int maxProfit(int[] prices) {
+        int[] dp = new int[2];
+        dp[0] -= prices[0];
+        dp[1] = 0;
+
+        for(int i = 1; i < prices.length; i++){
+            //第i天不持有股票
+            //【卖掉 第i-1天的股票】 和 【保持第i-1天不持有股票状态】 取最大
+            dp[1] = Math.max(dp[1], dp[0] + prices[i]);
+            //第i天持有股票
+            //【买第i天的股票】 和 【保持第i-1天持有股票状态】 取最大
+            dp[0] = Math.max(dp[0], -prices[i]);
+        }
+
+        return dp[1];
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
