--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -2431,6 +2431,33 @@ class Solution {
 
 
 
+
+### 二刷
+
+```java
+class Solution {
+    public int maxProfit(int[] prices) {
+        int res = 0;
+        int cur = prices[0];
+
+        for(int i = 1; i < prices.length; i++){
+            if(prices[i] > cur){
+                res += prices[i] - cur;
+            }
+
+            cur = prices[i];
+        }
+
+        return res;
+    }
+}
+```
+
+
+
+
+
+
 ### 代码
 
 我的代码
