--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -2581,6 +2581,49 @@ dp\[0][3] = -price[0];
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int maxProfit(int[] prices) {
+        int[] dp = new int[4];
+
+        dp[0] = 0;
+        dp[1] = -prices[0];
+        dp[2] = 0;
+        dp[3] = -prices[0];
+
+        for(int i = 1; i < prices.length; i++){
+            //【第一次不持有】
+            //保持上一次不持有
+            //上一次持有 卖掉
+            dp[0] = Math.max(dp[0], dp[1] + prices[i]);
+
+            //【第一次持有】
+            //保持上一次持有
+            //上一次不持有，买下
+            dp[1] = Math.max(dp[1], - prices[i]);
+
+            //【第二次不持有】
+            //保持上次
+            //卖掉第二次
+            dp[2] = Math.max(dp[2], dp[3] + prices[i]);
+
+            //【第二次持有】
+            //在第一次基础上买入
+            //保持上次
+            dp[3] = Math.max(dp[3], dp[0] - prices[i]);
+        }
+
+        return dp[2];
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
