--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -2733,6 +2733,41 @@ j = 4时，表示第二天不持有股票可获得的最大钱数；
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int maxProfit(int k, int[] prices) {
+        int len = prices.length;
+        //和买卖两次类似，买卖两次有四种状态
+        //买卖k次则有 2 * k 种状态
+        int[][] dp = new int[len][2 * k + 1];
+
+        for(int i = 1; i < 2 * k + 1; i += 2){
+            dp[0][i] = -prices[0];
+        }
+
+        for(int i = 1; i < len; i++){
+            for(int j = 1; j < 2 * k + 1; j++){
+                if(j % 2 == 0){
+                    //j 为 偶数，即不持有股票状态
+                    dp[i][j] = Math.max(dp[i-1][j], dp[i-1][j-1] + prices[i]);
+                }else{
+                    //持有股票专题
+                    dp[i][j] = Math.max(dp[i-1][j], dp[i-1][j-1] - prices[i]);
+                }
+            }
+        }
+
+        return dp[len-1][2 * k];
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
