--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -2884,6 +2884,36 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int maxProfit(int[] prices) {
+        int[][] dp = new int[prices.length + 1][2];
+        dp[1][0] = -prices[0];
+
+        for (int i = 2; i <= prices.length; i++) {
+            /*
+            dp[i][0] 第i天持有股票收益;
+            dp[i][1] 第i天不持有股票收益;
+            情况一：第i天是冷静期，不能以dp[i-1][1]购买股票,所以以dp[i - 2][1]买股票，没问题
+            情况二：第i天不是冷静期，理论上应该以dp[i-1][1]购买股票，但是第i天不是冷静期说明，
+            第i-1天没有卖出股票，
+                则dp[i-1][1]=dp[i-2][1],所以可以用dp[i-2][1]买股票，没问题
+             */
+            //1. 保持上一天持有状态    2. 根据上上天不持有状态 购入今天的股票
+            dp[i][0] = Math.max(dp[i - 1][0], dp[i - 2][1] - prices[i - 1]);
+            //1. 保持上一天不持有状态   2.根据前一天持有状态卖掉
+            dp[i][1] = Math.max(dp[i - 1][1], dp[i - 1][0] + prices[i - 1]);
+        }
+
+        return dp[prices.length][1];
+    }
+}
+```
+
+
+
 
 
 ## 三十、买卖股票的最佳时期含手续费
