--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -2930,6 +2930,29 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int maxProfit(int[] prices, int fee) {
+        int len = prices.length;
+        int[][] dp = new int[len][2];
+        dp[0][1] = -prices[0];
+
+        for(int i = 1; i < len; i++){
+            dp[i][0] = Math.max(dp[i-1][0], dp[i-1][1] + prices[i] - fee);
+            dp[i][1] = Math.max(dp[i-1][1], dp[i-1][0] - prices[i]);
+        }
+
+        return Math.max(dp[len-1][0], dp[len-1][1]);
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
