--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -3060,6 +3060,46 @@ class Solution {
 }
 ```
 
+
+
+### 二刷
+
+```java
+class Solution {
+    public int lengthOfLIS(int[] nums) {
+        // 初始化返回结果为1，因为最短的递增子序列长度为1
+        int res = 1;
+        int len = nums.length;
+        // dp数组用于存储以每个元素结尾的最长递增子序列的长度
+        int[] dp = new int[len];
+        // 初始化dp数组的第一个元素，单个元素本身长度为1
+        dp[0] = 1;
+
+        for(int i = 1; i < len; i++){
+            // 每个元素最短的递增子序列长度为1（只包含自己）
+            dp[i] = 1;
+            // 对于当前元素nums[i]，比较之前所有的元素nums[j]
+            for(int j = 0; j < i; j++){
+                // 如果之前的元素小于当前元素，说明可以形成一个递增子序列
+                if(nums[j] < nums[i]){
+                    // 更新dp[i]的值为当前的dp[i]和dp[j]+1中的最大值
+                    // dp[j] + 1表示在nums[j]后面添加nums[i]形成的新子序列长度
+                    dp[i] = Math.max(dp[i], dp[j] + 1);
+                }
+            }
+            // 更新全局最长递增子序列的长度
+            res = Math.max(dp[i], res);
+        }
+
+        return res;
+    }
+}
+```
+
+
+
+
+
 答案代码：
 
 ```java
