--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -3149,6 +3149,32 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int findLengthOfLCIS(int[] nums) {
+        int res = 1;
+        int pre = 1;
+
+        for(int i = 1; i < nums.length; i++){
+            if(nums[i-1] < nums[i]){
+                pre++;
+            }else{
+                res = Math.max(res, pre);
+                pre = 1;
+            }
+        }
+
+        return Math.max(res, pre);
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
