--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -3325,6 +3325,56 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int longestCommonSubsequence(String text1, String text2) {
+        int len1 = text1.length();
+        int len2 = text2.length();
+        int[][] dp = new int[len1][len2];
+
+        // 初始化二维数组的第一列
+        boolean tag = false; // 标记是否已经找到匹配字符
+        for(int i = 0; i < len1; i++){
+            // 如果找到匹配字符或者之前已经找到匹配字符，则将dp[i][0]设为1
+            if(text1.charAt(i) == text2.charAt(0) || tag){
+                tag = true; // 标记为已经找到匹配字符
+                dp[i][0] = 1;
+            }
+        }
+
+        tag = false; // 重置标记
+        for(int i = 0; i < len2; i++){
+            // 如果找到匹配字符或者之前已经找到匹配字符，则将dp[0][i]设为1
+            if(text1.charAt(0) == text2.charAt(i) || tag){
+                tag = true; // 标记为已经找到匹配字符
+                dp[0][i] = 1;
+            }
+        }
+
+        for(int i = 1; i < len1; i++){
+            for(int j = 1; j < len2; j++){
+                // 如果当前字符匹配，则dp[i][j] = dp[i-1][j-1] + 1
+                if(text1.charAt(i) == text2.charAt(j)){
+                    dp[i][j] = dp[i-1][j-1] + 1;
+                } else {
+                    // 否则，dp[i][j]取dp[i-1][j]和dp[i][j-1]中的最大值
+                    dp[i][j] = Math.max(dp[i-1][j], dp[i][j-1]);
+                }
+            }
+        }
+
+        // 返回dp数组的最后一个元素，即最长公共子序列的长度
+        return dp[len1-1][len2-1];
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
