--- a/线程/锁.md
+++ b/线程/锁.md
@@ -507,3 +507,104 @@ public class ConditionExample {
 
 
 
+## 五、锁升级
+
+在Java中，为了优化多线程环境下的同步性能，JVM引入了多种锁优化机制，包括锁升级和锁降级。锁升级是指锁的状态从低级别到高级别的转换，目的是在不同的并发场景下，动态调整锁的开销和性能。以下是Java锁的几种状态及其升级过程：
+
+### 锁的几种状态
+
+1. **无锁（No Lock）**：
+   - 对象在未被任何线程锁定的情况下处于无锁状态。
+   - 适用于单线程访问的场景，性能最佳。
+
+2. **偏向锁（Biased Locking）**：
+   - JVM假设大多数对象的锁是由同一线程多次获得的，因此引入偏向锁。
+   - 当一个线程第一次获得锁时，锁会偏向这个线程，之后该线程再次获取锁时，不需要进行同步操作，直接进入临界区。
+   - 偏向锁在没有竞争的情况下几乎没有锁开销，非常高效。
+
+3. **轻量级锁（Lightweight Locking）**：
+   - 当偏向锁存在竞争时，会升级为轻量级锁。
+   - 轻量级锁使用CAS（Compare-And-Swap）操作来竞争锁，是一种自旋锁，适用于短时间的锁竞争。
+
+4. **重量级锁（Heavyweight Locking）**：
+   - 当轻量级锁竞争激烈时，会升级为重量级锁。
+   - 重量级锁使用操作系统的互斥量（Mutex）来实现锁机制，线程会被阻塞，直到获得锁。
+   - 重量级锁的开销较大，适用于锁竞争激烈且持有锁时间较长的场景。
+
+### 锁升级过程
+
+#### 1. 从无锁到偏向锁
+- 在对象第一次被某个线程访问时，JVM会为该线程设置偏向锁。Mark Word中会记录偏向线程的ID。
+
+#### 2. 从偏向锁到轻量级锁
+- 当一个对象的偏向锁被其他线程尝试获取时，JVM会撤销偏向锁。
+- 如果撤销偏向锁后，依然存在竞争，JVM会将锁升级为轻量级锁。
+- 轻量级锁使用CAS操作，将对象的Mark Word指向当前线程的栈帧中的锁记录。
+
+#### 3. 从轻量级锁到重量级锁
+- 如果轻量级锁竞争激烈，即多个线程不断尝试获取锁并导致大量自旋，JVM会将锁升级为重量级锁。
+- 重量级锁会使用操作系统的互斥量，将线程挂起，直到获得锁。
+
+### 锁降级
+
+锁降级是指锁从高级别降到低级别的过程。例如，锁从重量级锁降级为轻量级锁。这通常发生在垃圾收集（GC）期间，以减少GC对应用程序性能的影响。锁降级机制主要是为了保证系统的稳定性和吞吐量。
+
+### 锁升级的优势
+
+- **性能优化**：锁升级机制在无竞争或低竞争的场景下，尽可能使用低开销的锁（如偏向锁和轻量级锁），提高性能。
+- **适应性**：锁可以根据实际的竞争情况动态升级，适应不同的并发场景。
+- **减少上下文切换**：使用轻量级锁和偏向锁可以减少线程的上下文切换，进一步提升系统性能。
+
+### 结论
+
+Java的锁升级机制通过偏向锁、轻量级锁和重量级锁的动态调整，优化了多线程环境下的同步性能。理解锁的状态和升级过程，有助于开发人员编写高性能的并发程序，并有效地调优Java应用程序的并发性能。
+
+
+
+## 六、偏向锁的撤销
+
+偏向锁（Biased Locking）是Java虚拟机（JVM）中的一种锁优化技术，用于减少无竞争情况下的同步开销。偏向锁的设计理念是假设大多数锁在整个生命周期内只会由同一个线程多次获得。因此，通过偏向锁，可以避免多次获取和释放锁的操作。偏向锁的撤销则是在检测到多线程竞争的情况下，将偏向锁升级或撤销为轻量级锁或重量级锁，以适应并发场景。
+
+### 偏向锁的撤销机制
+
+1. **进入同步块**：当一个线程首次进入同步块时，如果该对象头中的锁标志是未锁定状态（或者是可偏向状态），JVM会将锁的偏向标记设置为当前线程。
+
+2. **偏向锁使用**：如果同一个线程再次进入这个同步块，JVM可以直接跳过锁的获取操作，因为对象头中的锁标记已经指向了该线程。
+
+3. **偏向锁撤销触发**：
+   - 当另一个线程尝试获取已经被偏向锁定的对象时，会触发偏向锁的撤销。
+   - 发生垃圾回收（GC）时也可能会导致偏向锁的撤销，因为在GC过程中需要清理锁标志。
+   - JVM在某些情况下会主动撤销偏向锁，例如当一个锁被认为是有竞争倾向的锁时。
+
+4. **撤销过程**：
+   - 首先，JVM会暂停拥有偏向锁的线程，并检查偏向锁状态。
+   - 如果确认需要撤销偏向锁，JVM会通过CAS操作将对象头的偏向标记清除，并将锁状态升级为轻量级锁或重量级锁。
+   - 如果撤销过程中检测到有竞争，锁会进一步升级为重量级锁。
+
+5. **升级为轻量级锁或重量级锁**：
+   - **轻量级锁**：如果撤销时没有发现真正的多线程竞争，锁会升级为轻量级锁，利用CAS操作进行快速锁定。
+   - **重量级锁**：如果检测到竞争，锁会升级为重量级锁，使用操作系统的互斥机制（如操作系统的mutex）来管理线程的同步。
+
+### 偏向锁的优点和缺点
+
+- **优点**：
+  - 减少了无竞争情况下的同步开销。
+  - 提高了单线程多次进入同步块的性能。
+
+- **缺点**：
+  - 在多线程竞争激烈的情况下，偏向锁的撤销和升级过程会带来额外的开销。
+  - 可能导致JVM在高竞争环境下频繁撤销偏向锁，影响性能。
+
+### 适用场景
+
+偏向锁适用于大多数锁在无竞争环境下使用的场景。例如，单线程反复操作同一对象的同步块。而在高并发环境下，偏向锁的优势不明显，甚至会因频繁撤销带来性能损耗。
+
+### 关闭偏向锁
+
+在某些情况下，可以通过JVM参数关闭偏向锁：
+```bash
+-XX:-UseBiasedLocking
+```
+这可以避免偏向锁在高并发环境下频繁撤销带来的开销。
+
+总之，偏向锁是JVM优化锁机制的一种手段，通过减少无竞争情况下的锁操作开销来提高性能。但在高并发环境下，偏向锁的撤销和升级机制也需要仔细权衡。
