--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -150,3 +150,161 @@ class Solution {
 
 ```
 
+
+
+
+
+## 四、移动零（双指针）
+
+我的
+
+```java
+class Solution {
+    public void moveZeroes(int[] nums) {
+        //第一个零和第一个非零的数交换
+        int nzr = 0;    // 非 0
+
+        for(int i = 0; i < nums.length; i++){
+            if(nums[i] == 0){
+                nzr = i + 1;
+                while(nzr < nums.length && nums[nzr] == 0){
+                    nzr++;
+                }
+                if(nzr < nums.length){
+                    wrap(nums, nzr, i);
+                }
+            }
+        }
+    }
+
+    public void wrap(int[] nums, int a, int b){
+        int tag = nums[a];
+        nums[a] = nums[b];
+        nums[b] = tag;
+    }
+}
+```
+
+
+
+题解
+
+![](https://pic.leetcode-cn.com/36d1ac5d689101cbf9947465e94753c626eab7fcb736ae2175f5d87ebc85fdf0-283_2.gif)
+
+```java
+class Solution {
+    public void moveZeroes(int[] nums) {
+        int nzr = 0;    // 移动到非 0 的数值
+
+        for(int i = 0; i < nums.length; i++){
+            if(nums[i] != 0){
+                int tag = nums[i];
+                nums[i] = nums[nzr];
+                nums[nzr++] = tag;
+            }
+        }
+    }
+}
+```
+
+
+
+## 五、盛最多水的容器
+
+### 为什么移动水位较低的指针？
+
+面积 = 长 * 宽。
+
+首先 ，无论移动谁，长都是会变小的。
+
+然后宽是有两个指针水位较低者决定的，如果移动水位较高的指针：得到的新水位比原来低水位指针更低时，此时宽变小了，则面积变小；即使得到的新水位比原来高水位还要高，但是宽还是由原来低水位决定的，此时宽不必，但由于长变小了，则面积还是变小。
+
+所以啊，如果移动水位较高的指针，无论如何面积都是变小。
+
+```java
+class Solution {
+    public int maxArea(int[] height) {
+        int res = 0;
+        int left = 0;
+        int right = height.length - 1;
+
+        while(left < right){
+            //计算
+            res = Math.max(res, (right-left) * Math.min(height[left], height[right]));
+
+            //移动水位较低的指针
+            if(height[left] < height[right]){
+                left++;
+            }else{
+                right--;
+            }
+        }
+
+        return res;
+    }
+}
+```
+
+
+
+## 六、三数之和
+
+### 如何去重？
+
+1. 如果当前元素 `nums[i]` 和前一个元素 `nums[i-1]` 相同，那么跳过当前元素以避免产生重复的三元组。
+2. 通过两个 `while` 循环分别跳过相同的左指针和右指针的元素，以确保找到的三元组是唯一的。
+
+```java
+class Solution {
+    public List<List<Integer>> threeSum(int[] nums) {
+        List<List<Integer>> res = new ArrayList<>();
+
+        int len = nums.length;
+        int left = 0;
+        int right = nums.length - 1;
+        //排序
+        Arrays.sort(nums);
+        //最左边的必须要小于等于零
+        for(int i = 0; i < len && nums[i] <= 0; i++){
+            //去重
+            if(i > 0 && nums[i] == nums[i-1]){
+                continue;
+            }
+
+            left = i + 1;
+            right = nums.length - 1;
+
+            //这个是目标值，题目变为找两个和为target的数
+            int target = 0 - nums[i];
+
+            while(left < right){
+                if(nums[left] + nums[right] < target){
+                    //和太小
+                    left++;
+                }else if(nums[left] + nums[right] > target){
+                    //和太大
+                    right--;
+                }else{
+                    //和 等于 target
+                    res.add(Arrays.asList(nums[i], nums[left], nums[right]));
+
+                    //一次找完所有等于target的两个数
+                    //去重
+                    while(left < right && nums[left] == nums[left+1]){
+                        left++;
+                    }
+                    while(left < right && nums[right] == nums[right-1]){
+                        right--;
+                    }
+
+                    left++;
+                    right--;
+                }
+            }
+        }
+
+        return res;
+    }
+}
+```
+
