--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -1,6 +1,8 @@
 # 暑假算法练习
 
-## 一、两数之和
+## 一、字符串
+
+### 一、两数之和
 
 暴力法
 
@@ -64,7 +66,7 @@ class Solution {
 
 
 
-## 二、字母异位词分组
+### 二、字母异位词分组
 
 ```java
 class Solution {
@@ -128,7 +130,7 @@ class Solution {
 
 
 
-## 三、最长连续序列
+### 三、最长连续序列
 
 **题解：简单来说就是每个数都判断一次这个数是不是连续序列的开头那个数**。
 
@@ -152,9 +154,9 @@ class Solution {
 
 
 
+## 二、双指针
 
-
-## 四、移动零（双指针）
+### 四、移动零
 
 我的
 
@@ -209,9 +211,9 @@ class Solution {
 
 
 
-## 五、盛最多水的容器
+### 五、盛最多水的容器
 
-### 为什么移动水位较低的指针？
+#### 为什么移动水位较低的指针？
 
 面积 = 长 * 宽。
 
@@ -245,11 +247,9 @@ class Solution {
 }
 ```
 
+### 六、三数之和
 
-
-## 六、三数之和
-
-### 如何去重？
+#### 如何去重？
 
 1. 如果当前元素 `nums[i]` 和前一个元素 `nums[i-1]` 相同，那么跳过当前元素以避免产生重复的三元组。
 2. 通过两个 `while` 循环分别跳过相同的左指针和右指针的元素，以确保找到的三元组是唯一的。
@@ -307,4 +307,310 @@ class Solution {
     }
 }
 ```
+
+
+
+### 七、接雨水（困难）
+
+题解
+
+```java
+class Solution {
+    public int trap(int[] height) {
+        if (height == null || height.length == 0) {
+            return 0;
+        }
+	//左右指针下标
+        int left = 0, right = height.length - 1;
+      //左右边最大高度
+        int leftMax = height[left], rightMax = height[right];
+        int res = 0;
+
+        while (left < right) {
+            if (leftMax < rightMax) {
+              //如果左边最大高度小于右边最大高度
+              //1.左指针右移（用于更新最大高度，或是计算能接的雨水
+              //1.1 第一种情况：更新后高度大于原来的最大高度，则接不到雨水，用于更新最大高度
+              //1.2 第二种情况：更新后高度小于原来的最大高度，既然小于较小的最大高度，
+              //				那接到的雨水就是与较小最大高度的差值，且不更新高度
+                left++;
+                leftMax = Math.max(leftMax, height[left]);
+              //如果更新了最大高度，这里 leftMax = height[left] 即 res += 0;
+                res += leftMax - height[left];
+            } else {
+                right--;
+                rightMax = Math.max(rightMax, height[right]);
+                res += rightMax - height[right];
+            }
+        }
+
+        return res;
+    }
+}
+```
+
+
+
+## 三、滑动窗口
+
+### 八、无重复字符的最长子串
+
+```java
+class Solution {
+    public int lengthOfLongestSubstring(String s) {
+        int len = s.length();
+        Set<Character> set = new HashSet<>();
+        int res = 0, begin = 0, end = 0;
+        
+        while (begin < len && end < len) {
+            if (!set.contains(s.charAt(end))) {
+                // 如果字符不重复，添加到集合中
+                set.add(s.charAt(end++));
+                // 更新最长长度
+                res = Math.max(res, end - begin);
+            } else {
+                // 如果字符重复，从左边开始移除字符
+                set.remove(s.charAt(begin++));
+            }
+        }
+        
+        return res;
+    }
+}
+```
+
+
+
+### 九、找到字符串中所有字母异位词
+
+```java
+class Solution {
+    public List<Integer> findAnagrams(String s, String p) {
+        List<Integer> result = new ArrayList<>();
+        
+        if (s == null || p == null || s.length() < p.length()) {
+            return result;
+        }
+        
+        // 记录p的字符频率
+        int[] pCount = new int[26];
+        for (char c : p.toCharArray()) {
+            pCount[c - 'a']++;
+        }
+        
+        // 记录当前窗口内的字符频率
+        int[] sCount = new int[26];
+        int windowSize = p.length();
+        
+        // 遍历字符串s
+        for (int i = 0; i < s.length(); i++) {
+            // 增加当前字符到窗口内
+            sCount[s.charAt(i) - 'a']++;
+            
+            // 当窗口大小超过p的长度时，移除最左边的字符（关键）
+            if (i >= windowSize) {
+                sCount[s.charAt(i - windowSize) - 'a']--;
+            }
+            
+            // 比较两个计数器
+            if (isAnagram(pCount, sCount)) {
+                result.add(i - windowSize + 1);
+            }
+        }
+        
+        return result;
+    }
+    
+    //判断两个计数器是否相等
+    private boolean isAnagram(int[] pCount, int[] sCount) {
+        for (int i = 0; i < 26; i++) {
+            if (pCount[i] != sCount[i]) {
+                return false;
+            }
+        }
+        return true;
+    }
+}
+```
+
+
+
+## 四、子串
+
+### 十、和为 K 的子数组（前缀和+哈希表）
+
+题解：
+
+### 思路：
+
+1. **前缀和 (Prefix Sum)**：前缀和是指从数组的起始元素到当前元素的所有元素的和。通过前缀和，可以将问题转化为寻找两个前缀和的差值为 K 的问题。
+2. **哈希表 (Hash Map)**：使用哈希表来存储前缀和出现的次数。通过查找当前前缀和减去 K 是否存在于哈希表中，可以快速找到满足条件的子数组个数。
+
+### 具体步骤：
+
+1. 初始化一个哈希表 `prefixSumCount`，将前缀和 0 的次数设为 1，因为前缀和为 0 表示从数组起始元素到当前元素的和本身可能等于 K。
+2. 遍历数组，计算当前元素的前缀和 `currentSum`。
+3. 检查 `currentSum - K` 是否在哈希表中，如果存在，说明从某个位置到当前元素的子数组和为 K，将结果计数器增加相应的次数。
+4. 更新哈希表中当前前缀和的出现次数。
+
+```java
+class Solution {
+    public int subarraySum(int[] nums, int k) {
+        // 前缀和哈希表，存储前缀和出现的次数
+        HashMap<Integer, Integer> prefixSumCount = new HashMap<>();
+        // 初始化前缀和0出现的次数为1
+        prefixSumCount.put(0, 1);
+
+        int currentSum = 0;
+        int count = 0;
+
+        // 遍历数组
+        for (int num : nums) {
+            currentSum += num; // 计算当前前缀和
+            
+            // 检查 currentSum - k 是否在哈希表中
+            if (prefixSumCount.containsKey(currentSum - k)) {
+                count += prefixSumCount.get(currentSum - k); // 增加满足条件的子数组个数
+            }
+            
+            // 更新哈希表中当前前缀和的出现次数
+            prefixSumCount.put(currentSum, prefixSumCount.getOrDefault(currentSum, 0) + 1);
+        }
+
+        return count;
+    }
+}
+```
+
+
+
+### 十一、滑动窗口最大值（困难）（双端队列）
+
+题解：
+
+1. **双端队列**：使用一个双端队列保存当前窗口中的元素索引，队列中的元素从头到尾递减，队首元素为当前窗口的最大值。
+2. **保持队列递减**：在遍历数组时，如果新元素大于队尾元素，则将队尾元素移除，直到新元素不再大于队尾元素。
+3. **移除过期元素**：如果队首元素的索引已经不在当前窗口范围内，则将其移除。
+4. **记录最大值**：当窗口大小达到 k 时，将队首元素对应的值记录到结果数组中。
+
+```java
+class Solution {
+    public int[] maxSlidingWindow(int[] nums, int k) {
+        if (nums == null || nums.length < 2) {
+            return nums;
+        }
+
+        // 双端队列，存储元素的索引
+        Deque<Integer> deque = new LinkedList<>();
+        // 结果数组
+        int[] result = new int[nums.length - k + 1];
+
+        for (int i = 0; i < nums.length; i++) {
+            // 移除不在窗口范围内的元素
+            while (!deque.isEmpty() && deque.peekFirst() < i - k + 1) {
+                deque.pollFirst();
+            }
+            // 移除队列中小于当前元素的元素
+            while (!deque.isEmpty() && nums[deque.peekLast()] < nums[i]) {
+                deque.pollLast();
+            }
+            // 将当前元素添加到队列中
+            deque.offerLast(i);
+            // 当窗口大小达到 k 时，记录当前窗口的最大值
+            if (i >= k - 1) {
+                result[i - k + 1] = nums[deque.peekFirst()];
+            }
+        }
+
+        return result;
+    }
+}
+```
+
+
+
+### 十二、最小覆盖子串（困难）（滑动窗口+哈希表）
+
+题解：
+
+1. 初始化两个哈希表 `tFreq` 和 `windowFreq`，分别记录 `t` 中的字符及其出现次数和当前窗口中的字符及其出现次数。
+2. 使用两个指针 `left` 和 `right` 初始化滑动窗口的左右边界，`right` 指针用于扩展窗口，`left` 指针用于收缩窗口。
+3. 右指针移动，扩展窗口，更新窗口内字符的出现次数。如果窗口内字符数量满足 `t` 的要求，尝试收缩窗口以找到最小子串。
+4. 左指针移动，收缩窗口，更新窗口内字符的出现次数。如果当前窗口不再满足 `t` 的要求，停止收缩，继续扩展窗口。
+5. 在整个过程中记录满足条件的最小子串。
+
+```java
+class Solution {
+    public String minWindow(String s, String t) {
+        if (s == null || t == null || s.length() < t.length()) {
+            return "";
+        }
+
+        // 记录 t 中各字符的出现次数
+        HashMap<Character, Integer> tFreq = new HashMap<>();
+        for (char c : t.toCharArray()) {
+            tFreq.put(c, tFreq.getOrDefault(c, 0) + 1);
+        }
+
+        // 滑动窗口中各字符的出现次数
+        HashMap<Character, Integer> windowFreq = new HashMap<>();
+        int left = 0, right = 0;
+        int required = tFreq.size(); // 需要匹配的字符种类数
+        int formed = 0; // 当前窗口内匹配的字符种类数
+        int[] ans = {-1, 0, 0}; // 记录结果，格式为{窗口长度, 左边界, 右边界}
+
+        // 移动右指针
+        while (right < s.length()) {
+            char c = s.charAt(right);
+            windowFreq.put(c, windowFreq.getOrDefault(c, 0) + 1);
+
+            // 如果当前字符在 t 中，且窗口内该字符的数量与 t 中要求的数量相同，则 formed 加 1
+            if (tFreq.containsKey(c) && windowFreq.get(c).intValue() == tFreq.get(c).intValue()) {
+                formed++;
+            }
+
+            // 尝试收缩窗口
+            while (left <= right && formed == required) {
+                c = s.charAt(left);
+
+                // 更新最小窗口，如果当前窗口的长度小于之前记录的最小长度，则更新结果
+                if (ans[0] == -1 || right - left + 1 < ans[0]) {
+                    ans[0] = right - left + 1;
+                    ans[1] = left;
+                    ans[2] = right;
+                }
+
+                // 左指针右移，缩小窗口
+                windowFreq.put(c, windowFreq.get(c) - 1);
+                if (tFreq.containsKey(c) && windowFreq.get(c).intValue() < tFreq.get(c).intValue()) {
+                    formed--;
+                }
+
+                left++;
+            }
+
+            right++;
+        }
+
+        // 返回最小覆盖子串，如果 ans[0] 未更新过，说明未找到满足条件的子串，返回空字符串
+        return ans[0] == -1 ? "" : s.substring(ans[1], ans[2] + 1);
+    }
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
